Coding standards, language integration, banners, etc

--- a/chats/chat.css
+++ b/chats/chat.css
@@ -1,16 +1,21 @@
+/**
+ * @file
+ * Chat window styles.
+ */
+ 
 * {
 	margin:0;
 	padding:0;
 }
 body {
+  color: #3f434f;
 	font: 76%/1.4em 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
-	color: #3f434f;
 }
 a, .link {
+  border-bottom: 1px dotted #999;
 	color: #316AC5;
 	font-weight: bold;
 	text-decoration: none;
-	border-bottom: 1px dotted #999;
 }
 a:hover {
 	color: #be413b;
@@ -18,31 +23,31 @@ a:hover {
 strong {
 	color: #444;
 }
-
 h2, .dir, h1, p {
 	margin:5px;
 }
 h1 {
+  color: #578301;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-size: 24px;
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-weight: normal;
 	line-height: 1.2em;
-	color: #578301
+	
 }
 h2 {
+  color: #293950;
+  font-family: "AvantGarde Bk BT", "Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-size: 20px;
-	font-family: "AvantGarde Bk BT", "Trebuchet MS", Arial, Helvetica, sans-serif;
-	color: #293950;
 	text-shadow: 1px 1px 1px #6893c1;
 }
 p.msn {
 	background:url(http://media.perunoticias.net/images/msn2.png) no-repeat;
+  color: #18689a;
 	font: normal 16px Arial, Helvetica, sans-serif;
-	color: #18689a;
 	margin: 0 auto;
-	width: 300px;
-	text-align: left;
 	padding: 2px 0 2px 25px;
+  text-align: left;
+  width: 300px;	
 }
 .centro {
 	text-align: center !important;
@@ -61,7 +66,6 @@ strong {
 }
 
 /* Chat Olark */
-
 #habla_conversation_div span {
 	color: #FFF !important;
 	font-size: 14px !important;
@@ -72,7 +76,6 @@ strong {
 	color: #e3f427 !important;
 	font-size: 13px !important;
 }
-
 #olrk_tab_closure_span,
 #habla_topbar_div,
 #habla_both_div,
@@ -89,8 +92,12 @@ strong {
 .small {
 	font-size: 80%;
 }
+
 /*Olark Chat*/
 #habla_panel_div {
 	margin-bottom:150px;
 }
-.olarkmails{ margin-top:300px; text-align:center;}
+.olarkmails{
+  margin-top: 300px;
+  text-align: center;
+}
