--- a/framework/text.css
+++ b/framework/text.css
@@ -1,23 +1,11 @@
-/*
-	960 Grid System ~ Text CSS.
-
-	Learn more ~ http://960.gs/
-
-	Licensed under GPL and MIT.
-
-*/
-
-/* `Basic HTML
-
-----------------------------------------------------------------------------------------------------*/
 body {
-	font: 13px/1.5em Arial, Helvetica, sans-serif;
-	color: #2d303a;
-	background: #F3F3CD;
+	background: #f3f3cd;
+  color: #2d303a;
+  font: 13px/1.5em Arial, Helvetica, sans-serif;
 }
 a {
-	text-decoration: none;
 	color: #4c6590;
+  text-decoration: none;	
 }
 a:hover {
 	color: #A35A20;
@@ -40,26 +28,24 @@ fieldset {
 
 ----------------------------------------------------------------------------------------------------*/
 
-
-
 h1 {
-	font-size: 24px;
-	font-weight: normal;
-	line-height: 1.2em;
 	color: #000;
+  font-size: 24px;
+	font-weight: normal;
+	line-height: 1.2em;	
 }
 
 h2 {
+  color: #000;
 	font-size: 18px;
 	font-weight: normal;
-	color: #000;
 	line-height: 1.2em;
 }
 
 h3 {
+  color: #4d5b33;
 	font-size: 17px;
 	font-weight: bold;
-	color: #4d5b33;
 	line-height: 1.2em;
 }
 h4 {
@@ -71,10 +57,10 @@ h5 {
 h6 {
 	font-size: 12px;
 }
+
 /* `Spacing
 
 ----------------------------------------------------------------------------------------------------*/
-
 
 ol {
 	list-style: decimal;
@@ -83,8 +69,8 @@ ul {
 	list-style: disc;
 }
 li {
+  list-style-image: url('../images/icon-list.gif');
 	margin-left: 30px;
-	list-style-image: url('../images/icon-list.gif');
 	padding-bottom: 2px;
 }
 p,  dl,  hr,  h1,  h2,  h3,  h4,  h5,  h6,  ol,  ul,  pre,  table,  address,  fieldset {
@@ -92,14 +78,9 @@ p,  dl,  hr,  h1,  h2,  h3,  h4,  h5,  h6,  ol,  ul,  pre,  table,  address,  fi
 }
 
 /* 
-
 	Cusco Sky table styles
-
 	written by Braulio Soncco http://www.buayacorp.com
-
 */
-
-
 
 table {
 	width: 99%;
@@ -118,10 +99,10 @@ td, th {
 	padding: 2px 4px !important;
 }
 thead th {
-	text-align: center !important;
-	background: #E6EDF5;
+  background: #E6EDF5;
 	color: #4F76A3;
 	font-size: 90% !important;
+	text-align: center !important;
 }
 tbody th {
 	font-weight: bold;
